#4476 Fix streaming analytic issue